@@ -11,7 +11,7 @@ endif
 
 name = globus-net-manager
 _name = globus_net_manager
-version = 0.13
+version = 0.14
 soname = 0
 
 INSTALLDIR = $(CURDIR)/debian/tmp
