@@ -1,3 +1,9 @@
+globus-net-manager (0.14-1+gt6.@distro@) @distro@; urgency=low
+
+  * pre_connect return attrs get set on attr, not handle
+
+ -- Globus Toolkit <support@globus.org>  Fri, 18 Dec 2015 09:52:07 -0600
+
 globus-net-manager (0.13-1+gt6.@distro@) @distro@; urgency=low
 
   * Remove unused code
